--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@
 # Mono auto generated files
 mono_crash.*
 
+.idea/
+appsettings.Development.json
+appsettings.json
+Migrations
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
