--- a/SWP391Web.Infrastructure/SWP391Web.Infrastructure.csproj
+++ b/SWP391Web.Infrastructure/SWP391Web.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SWP391Web.Domain\SWP391Web.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
