--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,21 +1,42 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_DEFAULT_REGION: ap-southeast-1
+    AWS_ACCOUNT_ID: 886350084162
+    IMAGE_REPO_NAME: simple-docker-service
+    IMAGE_TAG: latest
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo Logging in to Amazon ECR
+      - echo "AWS CLI version:"
       - aws --version
-      - aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin 886350084162.dkr.ecr.ap-southeast-1.amazonaws.com
-      - REPOSITORY_URI=886350084162.dkr.ecr.ap-southeast-1.amazonaws.com/simple-docker-service
-      - IMAGE_TAG=latest
+      - echo "Docker version:"
+      - docker --version
+      - echo "Retrieving authentication token and authenticating Docker client to registry"
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+      - echo "Repository URI: $REPOSITORY_URI"
+      
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-      - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
+      - echo "Building Docker image"
+      - docker build -t $IMAGE_REPO_NAME .
+      - echo "Build completed on `date`"
+      
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker image...
+      - echo "Tagging Docker image"
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
+      - echo "Pushing Docker image to ECR"
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo "Push completed on `date`"
+      - echo "Image URI: $REPOSITORY_URI:$IMAGE_TAG"
+
+artifacts:
+  files:
+    - '**/*'
+  name: BuildArtifact
