--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -1,4 +1,4 @@
-name: Backend CI/CD Enhanced
+name: Backend Deployment
 
 on:
   push:
@@ -107,7 +107,7 @@ jobs:
           echo "::endgroup::"
 
       - name: Upload build artifacts (short retention)
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: deployment-package-${{ github.sha }}
           path: deploy-package.zip
@@ -136,7 +136,7 @@ jobs:
     
     steps:
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: deployment-package-${{ github.sha }}
 
