--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -47,51 +47,43 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Restore dependencies
-        run: |
-          echo "::group::Restoring NuGet packages"
-          dotnet restore SWP391Web.sln --verbosity minimal
-          echo "::endgroup::"
+        run: dotnet restore SWP391Web.sln --verbosity minimal
 
       - name: Build solution
-        run: |
-          echo "::group::Building solution"
-          dotnet build SWP391Web.sln --configuration Release --no-restore --verbosity minimal
-          echo "::endgroup::"
+        run: dotnet build SWP391Web.sln --configuration Release --no-restore --verbosity minimal
 
       - name: Run tests if any
         run: |
-          echo "::group::Running tests"
           if find . -name "*.Test*.csproj" -o -name "*Test.csproj" | grep -q .; then
             dotnet test SWP391Web.sln --configuration Release --no-build --verbosity minimal
           else
             echo "No test projects found, skipping tests"
           fi
-          echo "::endgroup::"
 
-      - name: Publish project
+      - name: Publish project (self-contained Linux)
         run: |
-          echo "::group::Publishing API project"
-          dotnet publish SWP391Web.API/SWP391Web.API.csproj -c Release -o ./publish --no-build
-          echo "::endgroup::"
+          dotnet publish SWP391Web.API/SWP391Web.API.csproj \
+            -c Release \
+            -o ./publish \
+            --no-build \
+            -r linux-x64 \
+            --self-contained true \
+            /p:PublishTrimmed=true \
+            /p:PublishSingleFile=true
 
       - name: Optimize publish folder
         run: |
-          echo "::group::Optimizing publish folder"
           cd publish
           find . -name "*.pdb" -delete
           find . -name "*.xml" -delete
           rm -f appsettings.Development.json
           echo "Publish folder size: $(du -sh . | cut -f1)"
-          echo "::endgroup::"
 
       - name: Create deployment package
         run: |
-          echo "::group::Creating deployment package"
           cd publish
           zip -r9 ../deploy-package.zip . 
           cd ..
-          echo "Package size: $(du -h deploy-package.zip | cut -f1)"
-          echo "::endgroup::"
 
       - name: Upload build artifacts (short retention)
         uses: actions/upload-artifact@v4
@@ -103,11 +95,9 @@ jobs:
       - name: Local cleanup
         if: always()
         run: |
-          echo "::group::Local cleanup"
           rm -rf ./publish
           rm -f deploy-package.zip
           dotnet nuget locals all --clear
-          echo "::endgroup::"
 
   deploy:
     name: Deploy to EC2
@@ -183,16 +173,3 @@ jobs:
           echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Time:** $(date -u)" >> $GITHUB_STEP_SUMMARY
           echo "- **Status:** Success" >> $GITHUB_STEP_SUMMARY
-
-  cleanup:
-    name: Cleanup Old Artifacts
-    runs-on: ubuntu-latest
-    needs: [deploy]
-    if: always()
-    steps:
-      - name: Delete old artifacts
-        uses: geekyeggo/delete-artifact@v2
-        with:
-          name: deployment-package-*
-          useGlob: true
-          skipIfNotFound: true
