--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -146,7 +146,9 @@ jobs:
             sudo rm -rf ${{ env.DEPLOYMENT_PATH }}/*
             sudo cp -r deploy_temp/* ${{ env.DEPLOYMENT_PATH }}/
             sudo chown -R ${{ env.EC2_USER }}:${{ env.EC2_USER }} ${{ env.DEPLOYMENT_PATH }}
-            echo '${{ secrets.APP_CONFIG }}' | sudo tee ${{ env.DEPLOYMENT_PATH }}/appsettings.Production.json > /dev/null
+            sudo tee ${{ env.DEPLOYMENT_PATH }}/appsettings.Production.json > /dev/null <<'EOF'
+            ${{ secrets.APP_CONFIG }}
+            EOF
             sudo systemctl start kestrel-${{ env.PROJECT_NAME }}.service
             sleep 5
             sudo systemctl is-active --quiet kestrel-${{ env.PROJECT_NAME }}.service || exit 1
